libpurple/util.h

typedef struct _PurpleMenuAction
{
	char *label;
	PurpleCallback callback;
	gpointer data;
	GList *children;
} PurpleMenuAction;
typedef char *(*PurpleInfoFieldFormatCallback)(const char *field, size_t len);
PurpleMenuAction *purple_menu_action_new(const char *label, PurpleCallback callback,
                                     gpointer data, GList *children);
void purple_menu_action_free(PurpleMenuAction *act);
void purple_util_set_current_song(const char *title, const char *artist,
		const char *album);
void purple_util_init(void);
void purple_util_uninit(void);
gchar *purple_base16_encode(const guchar *data, gsize len);
guchar *purple_base16_decode(const char *str, gsize *ret_len);
gchar *purple_base16_encode_chunked(const guchar *data, gsize len);
gchar *purple_base64_encode(const guchar *data, gsize len);
guchar *purple_base64_decode(const char *str, gsize *ret_len);
guchar *purple_quotedp_decode(const char *str, gsize *ret_len);
char *purple_mime_decode_field(const char *str);
const char *purple_utf8_strftime(const char *format, const struct tm *tm);
const char *purple_get_tzoff_str(const struct tm *tm, gboolean iso);
const char *purple_date_format_short(const struct tm *tm);
const char *purple_date_format_long(const struct tm *tm);
const char *purple_date_format_full(const struct tm *tm);
const char *purple_time_format(const struct tm *tm);
time_t purple_time_build(int year, int month, int day, int hour,
					   int min, int sec);
time_t purple_str_to_time(const char *timestamp, gboolean utc,
                        struct tm *tm, long *tz_off, const char **rest);
gboolean purple_markup_find_tag(const char *needle, const char *haystack,
							  const char **start, const char **end,
							  GData **attributes);
gboolean purple_markup_extract_info_field(const char *str, int len, PurpleNotifyUserInfo *user_info,
                                        const char *start_token, int skip,
                                        const char *end_token, char check_value,
                                        const char *no_value_token,
                                        const char *display_name, gboolean is_link,
                                        const char *link_prefix,
					PurpleInfoFieldFormatCallback format_cb);
void purple_markup_html_to_xhtml(const char *html, char **dest_xhtml,
							   char **dest_plain);
char *purple_markup_strip_html(const char *str);
char *purple_markup_linkify(const char *str);
char *purple_unescape_html(const char *html);
char *purple_markup_slice(const char *str, guint x, guint y);
char *purple_markup_get_tag_name(const char *tag);
const gchar *purple_home_dir(void);
const char *purple_user_dir(void);
void purple_util_set_user_dir(const char *dir);
int purple_build_dir(const char *path, int mode);