libpurple/wrapper/Util.cs

/* purple
 *
 * Purple is the legal property of its developers, whose names are too numerous
 * to list here.  Please refer to the COPYRIGHT file distributed with this
 * source distribution.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02111-1301  USA
 */

/*
 * This file was auto-generated from the libpurple header files to provide a
 * clean interface between .NET/CLR and the unmanaged C library, libpurple.
 *
 * This code isn't complete, but completely a work in progress. :)
 * Three major things left:
 *  - Resolve the remaining UNKNOWN types.
 *  - Handle translation between delegate and function pointers.
 *  - Fill in the translation between public .NET class calls and private DllImport[] calls.
 */

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace PurpleWrapper
{
	public class Util
	{
		/*
		 * PurpleMenuAction * purple_menu_action_new(char * label, PurpleCallback callback, gpointer data, GList * children)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_menu_action_new(string label, UNKNOWN callback, IntPtr data, IntPtr children);

		public static PurpleMenuAction MenuActionNew(string label, PurpleCallback callback, IntPtr data, GList children)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_menu_action_free(PurpleMenuAction * act)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_menu_action_free(IntPtr act);

		public static void MenuActionFree(PurpleMenuAction act)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_set_current_song(char * title, char * artist, char * album)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_set_current_song(string title, string artist, string album);

		public static void SetCurrentSong(string title, string artist, string album)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_init()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_init();

		public static void Init()
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_uninit()
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_uninit();

		public static void Uninit()
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_base16_encode(guchar * data, gsize len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_base16_encode(IntPtr data, UNKNOWN len);

		public static string Base16Encode(guchar data, gsize len)
		{
			throw new NotImplementedException();
		}

		/*
		 * guchar * purple_base16_decode(char * str, gsize * ret_len)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_base16_decode(string str, IntPtr ret_len);

		public static guchar Base16Decode(string str, gsize ret_len)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_base16_encode_chunked(guchar * data, gsize len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_base16_encode_chunked(IntPtr data, UNKNOWN len);

		public static string Base16EncodeChunked(guchar data, gsize len)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_base64_encode(guchar * data, gsize len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_base64_encode(IntPtr data, UNKNOWN len);

		public static string Base64Encode(guchar data, gsize len)
		{
			throw new NotImplementedException();
		}

		/*
		 * guchar * purple_base64_decode(char * str, gsize * ret_len)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_base64_decode(string str, IntPtr ret_len);

		public static guchar Base64Decode(string str, gsize ret_len)
		{
			throw new NotImplementedException();
		}

		/*
		 * guchar * purple_quotedp_decode(char * str, gsize * ret_len)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_quotedp_decode(string str, IntPtr ret_len);

		public static guchar QuotedpDecode(string str, gsize ret_len)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_mime_decode_field(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_mime_decode_field(string str);

		public static string MimeDecodeField(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_utf8_strftime(char * format, struct tm)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_strftime(string format, UNKNOWN tm);

		public static string Utf8Strftime(string format, struct tm)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_get_tzoff_str(struct tm, gboolean iso)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_get_tzoff_str(UNKNOWN tm, bool iso);

		public static string GetTzoffStr(struct tm, bool iso)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_date_format_short(struct tm)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_date_format_short(UNKNOWN tm);

		public static string DateFormatShort(struct tm)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_date_format_long(struct tm)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_date_format_long(UNKNOWN tm);

		public static string DateFormatLong(struct tm)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_date_format_full(struct tm)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_date_format_full(UNKNOWN tm);

		public static string DateFormatFull(struct tm)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_time_format(struct tm)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_time_format(UNKNOWN tm);

		public static string TimeFormat(struct tm)
		{
			throw new NotImplementedException();
		}

		/*
		 * time_t purple_time_build(int year, int month, int day, int hour, int min, int sec)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_time_build(int year, int month, int day, int hour, int min, int sec);

		public static time_t TimeBuild(int year, int month, int day, int hour, int min, int sec)
		{
			throw new NotImplementedException();
		}

		/*
		 * time_t purple_str_to_time(char * timestamp, gboolean utc, struct tm, long * tz_off, char ** rest)
		 */
		[DllImport("libpurple.dll")]
		private static extern UNKNOWN purple_str_to_time(string timestamp, bool utc, UNKNOWN tm, IntPtr tz_off, IntPtr rest);

		public static time_t StrToTime(string timestamp, bool utc, struct tm, long tz_off, char rest)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_markup_find_tag(char * needle, char * haystack, char ** start, char ** end, GData ** attributes)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_markup_find_tag(string needle, string haystack, IntPtr start, IntPtr end, IntPtr attributes);

		public static bool MarkupFindTag(string needle, string haystack, char start, char end, GData attributes)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_markup_extract_info_field(char * str, int len, PurpleNotifyUserInfo * user_info, char * start_token, int skip, char * end_token, char check_value, char * no_value_token, char * display_name, gboolean is_link, char * link_prefix, PurpleInfoFieldFormatCallback format_cb)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_markup_extract_info_field(string str, int len, IntPtr user_info, string start_token, int skip, string end_token, char check_value, string no_value_token, string display_name, bool is_link, string link_prefix, UNKNOWN format_cb);

		public static bool MarkupExtractInfoField(string str, int len, PurpleNotifyUserInfo user_info, string start_token, int skip, string end_token, char check_value, string no_value_token, string display_name, bool is_link, string link_prefix, PurpleInfoFieldFormatCallback format_cb)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_markup_html_to_xhtml(char * html, char ** dest_xhtml, char ** dest_plain)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_markup_html_to_xhtml(string html, IntPtr dest_xhtml, IntPtr dest_plain);

		public static void MarkupHtmlToXhtml(string html, char dest_xhtml, char dest_plain)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_markup_strip_html(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_markup_strip_html(string str);

		public static string MarkupStripHtml(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_markup_linkify(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_markup_linkify(string str);

		public static string MarkupLinkify(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_unescape_html(char * html)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_unescape_html(string html);

		public static string UnescapeHtml(string html)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_markup_slice(char * str, guint x, guint y)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_markup_slice(string str, uint x, uint y);

		public static string MarkupSlice(string str, uint x, uint y)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_markup_get_tag_name(char * tag)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_markup_get_tag_name(string tag);

		public static string MarkupGetTagName(string tag)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_markup_is_rtl(char * html)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_markup_is_rtl(string html);

		public static bool MarkupIsRtl(string html)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_home_dir()
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_home_dir();

		public static string HomeDir()
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_user_dir()
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_user_dir();

		public static string UserDir()
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_set_user_dir(char * dir)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_set_user_dir(string dir);

		public static void SetUserDir(string dir)
		{
			throw new NotImplementedException();
		}

		/*
		 * int purple_build_dir(char * path, int mode)
		 */
		[DllImport("libpurple.dll")]
		private static extern int purple_build_dir(string path, int mode);
